# game_gui

./: .clang-format  .gitignore  Makefile  README.md  TODO  format-changed.sh  main.cpp  menu.cpp  menu.h  player.cpp  player.h  start.sh
SDL/: CMakeLists.txt  configure  engine_hooks.cpp  inputs.cpp  inputs.h  main.cpp  main.h  menu.cpp  menu.h  music.cpp  music.h  network_stub.cpp  networking.cpp  networking.h  networking_old.cpp  networking_old.h  npc.cpp  npc.h  player_actions.cpp  player_actions.h  render.cpp  test.sh  text.cpp  text.h  texture.cpp  texture.h  update_network_bindings.sh  window.cpp  window.h
SDL/implementations/: AnimalSDL.h  BeingSDL.cpp  BeingSDL.h  alchemistSDL.cpp  alchemistSDL.h
alchemist/: axe.cpp  axe.h  el_list.cpp  elements.cpp  elements.h  knife.cpp
core/: CMakeLists.txt  craft.cpp  craft.h  engine_hooks.h  networking.cpp  networking.h  npc.cpp  npc.h  packet_types.h  player.cpp  player.h  protocol.md  tiles.cpp  tiles.h  world.cpp  world.h
core/alchemist/: axe.cpp  axe.h  el_list.cpp  el_list.h  elements.cpp  elements.h  game_time.cpp  game_time.h  knife.cpp  knife.h  main.cpp  names.cpp  names.h  npc_talk.cpp  npc_talk.h  player_stats.h
core/alchemist-tui/: Makefile  game_time.cpp  game_time.h  main.cpp  npc_talk.cpp  npc_talk.h  plants.cpp  plants.h  show_list.cpp  show_list.h  test_axe.cpp  test_axe.h
server/: Cargo.toml  build.rs  core_headers.h  update_core.sh
server-cpp/: .clang-format  CMakeLists.txt  engine_hooks.cpp  main.cpp
server/cpp-src/: CMakeLists.txt  craft.cpp  craft.h  craft_ing.cpp  craft_ing.h  elements_server.cpp  elements_server.h  headers_wrapper.h  networking.cpp  networking.h  player_server.cpp  player_server.h  world_server.cpp  world_server.h
server/cpp-src/tools/: axe.cpp  axe.h  axe_blade.cpp  axe_blade.h  axe_handle.cpp  axe_handle.h  knife.cpp  knife.h  knife_blade.cpp  knife_blade.h  knife_handle.cpp  knife_handle.h
server/src/: common.rs  convert_types.rs  core.rs  generator.rs  lib.rs  main.rs  types.rs
the_game_net/: Cargo.toml  build.rs  core_headers.h
the_game_net/src/: common.rs  core.rs  events.rs  lib.rs  send_packets.rs  types.rs
